<resources>
    <string name="app_name">Weather-Now</string>
    <string name="title_today">Today</string>
    <string name="title_hourly">Hourly</string>
    <string name="title_daily">Daily</string>
    <string name="title_cities">Cities</string>
    <string name="title_fav_cities">Favorite Cities</string>
    <string name="fav">Favorite</string>
    <string name="favorite">Favorite</string>
</resources>