<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_today"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_hourly"
        android:icon="@drawable/ic_hourly"
        android:title="@string/title_hourly" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_daily"
        android:title="@string/title_daily" />

    <item
        android:id="@+id/navigation_cities"
        android:icon="@drawable/ic_city"
        android:title="@string/title_cities" />

    <item
        android:id="@+id/navigation_fav_cities"
        android:icon="@drawable/ic_fav"
        android:title="@string/title_fav_cities" />

</menu>